--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-7 [中国贸易4月快速增长](/articles/voa/1040963.md)
+
+5-7 [4月份美国经济或创造出近百万工作机会](/articles/voa/1040964.md)
+
+5-7 [奥斯汀：美国没有计划击落中国火箭](/articles/voa/1040965.md)
+
 5-7 [中国对全球关键稀有矿产资源的控制远不止稀土](/articles/voa/1040966.md)
 
 5-7 [“殴打、性侵... 北京要摧毁我们“ 新疆集中营幸存者首度作证国会](/articles/voa/1040967.md)
@@ -594,10 +600,4 @@
 4-24 [印尼发现失联潜艇碎片，认定舰上53名军人无生还希望](/articles/voa/1041261.md)
 
 4-24 [高中生接受军训 分析：打不打仗都强调备战](/articles/voa/1041262.md)
-
-4-24 [印度疫情继续恶化，首都医院发出缺氧呼救](/articles/voa/1041263.md)
-
-4-24 [专访美国政治科学学者柯睿楷：谈习近平以反腐治国](/articles/voa/1041264.md)
-
-4-24 [拜登将在G7峰会上敦促盟友就中国强迫劳动采取行动](/articles/voa/1041265.md)
 
