--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-7 [北京严限民企融资圈地   却让国企抢占地产市场](/articles/rfa/1045655.md)
+
 5-7 [表扬西方医疗福利     中央党校教授遭小粉红批“崇洋媚外”](/articles/rfa/1045656.md)
 
 5-7 [台外交部长警告 : 中国准备对台发动最后攻击](/articles/rfa/1045657.md)
@@ -598,6 +600,4 @@
 4-6 [中国“渔船”赖着不走    菲律宾八点声明谴责](/articles/rfa/1045953.md)
 
 4-6 [人权组织发起“为西藏发推”   反制中共大外宣](/articles/rfa/1045954.md)
-
-4-6 [“开胸验肺”黑幕曝光：前市委书记受贿四十万](/articles/rfa/1045955.md)
 
