--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-7 [中国水滴CEO称短期内用户增长优先 盈利其次](/articles/reuters/1038341.md)
+
+5-7 [中国外管局：一季度国际收支仍保持基本平衡 直接投资持续净流入](/articles/reuters/1038342.md)
+
+5-7 [美指下行人民币收创近两个半月新高 关注晚间美国非农数据](/articles/reuters/1038343.md)
+
 5-7 [中国1-4月汽车累计销量预估完成865.7万辆 同比增50.3%--中汽协](/articles/reuters/1038344.md)
 
 5-7 [上汽集团获11家金融机构260亿银团贷款 用于智能电动等创新领域](/articles/reuters/1038345.md)
@@ -594,10 +600,4 @@
 4-29 [独家：美司法部终止特朗普时期对“庇护城市”的拨款限制](/articles/reuters/1038639.md)
 
 4-29 [高通预期当季营收与获利高于华尔街预估 称供应链改善](/articles/reuters/1038640.md)
-
-4-29 [波音因电气问题暂停交付737 MAX飞机](/articles/reuters/1038641.md)
-
-4-29 [三星电子第一季营收和获利双升 第二季芯片业务料大幅改善](/articles/reuters/1038642.md)
-
-4-29 [独家：中国投资者正洽购沙特阿美股份 中投最可能投资--消息](/articles/reuters/1038643.md)
 
