--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-7 [安理会讨论全球合作 中美俄外长同时“与会”](/articles/dw/1042599.md)
+
 5-7 [德国拒绝美国暂停放弃新冠疫苗专利提议](/articles/dw/1042600.md)
 
 5-7 [扩大接种范围 德国不再对AZ疫苗设限](/articles/dw/1042601.md)
@@ -598,6 +600,4 @@
 4-19 [港媒：港府斥资千万美金游说美国政界](/articles/dw/1042897.md)
 
 4-19 [德国前蹦床专业选手是否会成为新一任联邦总理](/articles/dw/1042898.md)
-
-4-19 [她会不会成为德国第一任“绿党总理”？](/articles/dw/1042899.md)
 
