--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [中国强调保障粮食安全是事关国家安全的首要任务](/articles/voa/1040961.md)
+
 5-7 [台湾半导体实力成“矽盾”，中国避战？](/articles/voa/1040962.md)
 
 5-7 [中国贸易4月快速增长](/articles/voa/1040963.md)
@@ -598,6 +600,4 @@
 4-25 [习明泽个资泄露案二审宣判，牛腾宇14年刑期不变](/articles/voa/1041259.md)
 
 4-25 [与中国有关谍案不断 又一俄科学家被判重刑](/articles/voa/1041260.md)
-
-4-24 [印尼发现失联潜艇碎片，认定舰上53名军人无生还希望](/articles/voa/1041261.md)
 
