--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [奥运在即疫情不减 日本延长“紧急事态宣言”至5月底](/articles/voa/1040957.md)
+
 5-7 [中国即将通过海上交通安全法修订案 持续强化对有争议亚洲海域控制](/articles/voa/1040958.md)
 
 5-7 [印度日增新冠确诊病例再创新高 反对党领袖称全国封锁“不可避免”](/articles/voa/1040959.md)
@@ -598,6 +600,4 @@
 4-25 [中国考虑建立小行星防御系统](/articles/voa/1041255.md)
 
 4-25 [纽约州将恢复强生新冠疫苗的接种](/articles/voa/1041256.md)
-
-4-25 [伦敦万人游行，反对疫情封闭措施](/articles/voa/1041257.md)
 
