--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-8 [世界“顶回”中国 (2): 印太国家向美国靠近](/articles/voa/1040951.md)
+
+5-8 [美国就业增长出人预料地减缓 失业率上扬](/articles/voa/1040952.md)
+
+5-8 [因港区国安法被还柙民主党前主席胡志伟 获法院短暂保释丁父忧](/articles/voa/1040953.md)
+
 5-8 [世卫组织批准中国国药疫苗紧急使用授权](/articles/voa/1040954.md)
 
 5-8 [2019年中国碳排放量已超过经合组织国家总和](/articles/voa/1040955.md)
@@ -594,10 +600,4 @@
 4-26 [拜登认定亚美尼亚大屠杀为种族灭绝后 土耳其强烈反对并召见美国大使](/articles/voa/1041249.md)
 
 4-25 [巴格达一家收治新冠肺炎病人的医院大火 至少82人丧生](/articles/voa/1041250.md)
-
-4-25 [“女权”运动者被噤声 生存空间日益紧缩](/articles/voa/1041251.md)
-
-4-25 [美日大戳痛处，中国为何轻轻放过？](/articles/voa/1041252.md)
-
-4-25 [拜登认可针对亚美尼亚人的暴行是种族灭绝](/articles/voa/1041253.md)
 
