--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [美国新冠病例持续下降 白宫抗疫团队聚焦让更多人接种疫苗](/articles/voa/1040946.md)
+
 5-8 [布林肯: 美国呼吁世卫总干事邀请台湾参加世界卫生大会](/articles/voa/1040947.md)
 
 5-8 [中国称火箭碎片不太可能造成损害](/articles/voa/1040948.md)
@@ -598,6 +600,4 @@
 4-26 [德国总理候选人希望对中国、俄罗斯采取更强硬的立场](/articles/voa/1041244.md)
 
 4-26 [印度每日感染近35万 美国提供新的援助](/articles/voa/1041245.md)
-
-4-26 [美国开始结束阿富汗军事任务](/articles/voa/1041246.md)
 
