--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-8 [假视频、新华社登堂入室：中国信息战在泰国引起担忧](/articles/rfa/1045646.md)
+
+5-8 [中国协助印尼打捞潜艇  另有所图？](/articles/rfa/1045647.md)
+
 5-8 [美中对“多边主义”有不同解读   布林肯舌战王毅](/articles/rfa/1045648.md)
 
 5-8 [中国十五个大城市女多男少     为什么？](/articles/rfa/1045649.md)
@@ -596,8 +600,4 @@
 4-7 [《纽约客》：新疆拘留营幸存妇女的经历](/articles/rfa/1045944.md)
 
 4-7 [中国环球电视网重返欧洲 但争议不断](/articles/rfa/1045945.md)
-
-4-6 [傅希秋牧师：中国洗脑式关押基督徒的案例](/articles/rfa/1045946.md)
-
-4-6 [在台缅人：要死多少联合国才会说句话？中国滚出缅甸！](/articles/rfa/1045947.md)
 
