--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [如何维护多边主义？美中俄安理会外长会议交锋](/articles/voa/1040945.md)
+
 5-8 [美国新冠病例持续下降 白宫抗疫团队聚焦让更多人接种疫苗](/articles/voa/1040946.md)
 
 5-8 [布林肯: 美国呼吁世卫总干事邀请台湾参加世界卫生大会](/articles/voa/1040947.md)
@@ -598,6 +600,4 @@
 4-26 [华盛顿政治舞台和好莱坞影剧舞台的交集点](/articles/voa/1041243.md)
 
 4-26 [德国总理候选人希望对中国、俄罗斯采取更强硬的立场](/articles/voa/1041244.md)
-
-4-26 [印度每日感染近35万 美国提供新的援助](/articles/voa/1041245.md)
 
