--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+5-8 [中国三大电信运营商将被纽交所摘牌](/articles/reuters/1038326.md)
+
+5-8 [中国水滴纽交所上市首日破发 收盘较招股价跌逾19%](/articles/reuters/1038327.md)
+
+5-8 [焦点：WHO将国药集团新冠疫苗列入紧急使用清单 为首个获批非西方疫苗](/articles/reuters/1038328.md)
+
+5-8 [美股标普500指数和道指均创纪录收盘高位 就业报告缓解升息担忧](/articles/reuters/1038329.md)
+
+5-8 [美元因就业数据令人失望全面走软 新兴市场货币指数创新高](/articles/reuters/1038330.md)
+
 5-8 [焦点：4月就业数据意外疲弱 美联储没有理由不保持超宽松货币政策](/articles/reuters/1038331.md)
 
 5-8 [焦点：4月就业数据意外疲弱 美联储没有理由不保持超宽松货币政策](/articles/reuters/1038332.md)
@@ -590,14 +600,4 @@
 4-29 [综述：政府撒币强推 美国第一季GDP增长料创佳绩](/articles/reuters/1038624.md)
 
 4-29 [独家：中国反垄断行动指向腾讯 预计罚金至少100亿元--消息人士](/articles/reuters/1038625.md)
-
-4-29 [鉴于中国出现的信用事件 亚洲投资级债券从“中性”降至“不看好”--瑞银财富管理](/articles/reuters/1038626.md)
-
-4-29 [中国空间站首舱“天和核心舱”发射入轨--央视](/articles/reuters/1038627.md)
-
-4-29 [澳洲葡萄酒去年第四季对中国出口锐减96% 几乎被高关税清零](/articles/reuters/1038628.md)
-
-4-29 [拜登任职以来首次发表国会演说 对中国展现强硬立场](/articles/reuters/1038629.md)
-
-4-29 [分析：美联储平息缩表讨论 但投资者将在未来几个月寻找线索](/articles/reuters/1038630.md)
 
