--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-8 [一个不那么“新冠”的图集](/articles/dw/1042594.md)
+
+5-8 [德国网速为什么这么慢？](/articles/dw/1042595.md)
+
 5-7 [习近平：世界陷入乱局，中国应把握机遇](/articles/dw/1042596.md)
 
 5-7 [中国：“长征五号”碎片造成危害的概率极低](/articles/dw/1042597.md)
@@ -596,8 +600,4 @@
 4-20 [两岸如果爆发战争，澳洲会去驰援台湾吗？](/articles/dw/1042892.md)
 
 4-20 [2021全球新闻自由指数 中国倒数第四](/articles/dw/1042893.md)
-
-4-20 [菲律宾将派军舰进驻南海  宣示其资源主权](/articles/dw/1042894.md)
-
-4-20 [加强空对地攻击能力 台湾争取购买美飞弹](/articles/dw/1042895.md)
 
