--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-8 [参议院中国法案拟设立“首席制造官”职位](/articles/voa/1040941.md)
+
 5-8 [美众议员推出法案 要阻止中共在美大学从事间谍和盗窃活动](/articles/voa/1040942.md)
 
 5-8 [国会共和党人致函司法部 反对拜登政府学术特赦计划](/articles/voa/1040943.md)
@@ -598,6 +600,4 @@
 4-26 [五角大楼：将动用授权范围内一切资源帮助印度抗击新冠疫情](/articles/voa/1041239.md)
 
 4-26 [领跑新一轮绿色经济 专家指美国比目标空泛的中国更可靠](/articles/voa/1041240.md)
-
-4-26 [创造历史 赵婷获得奥斯卡最佳导演奖 中国官媒沉默](/articles/voa/1041241.md)
 
