--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+5-8 [盖茨离婚引发的问题：夫妻如何成为好同事？](/articles/ft/1045650.md)
+
+5-8 [新冠疫情让我们都成了“网购狂”](/articles/ft/1045651.md)
+
+5-8 [从卡特到拜登：人权在美国对外政策中的角色](/articles/ft/1045652.md)
+
 5-8 [美国4月就业增长远逊预期](/articles/ft/1045653.md)
 
 5-8 [绿色转型需求将铜价推至历史新高](/articles/ft/1045654.md)
@@ -594,10 +600,4 @@
 3-4 [英国向企业提供税收优惠以刺激投资](/articles/ft/1045948.md)
 
 3-3 [郭树清两会前发言：紧缩来临？](/articles/ft/1045949.md)
-
-3-3 [央行应该以什么为目标？](/articles/ft/1045950.md)
-
-3-3 [各国央行政策趋同的时代已经终结](/articles/ft/1045951.md)
-
-3-3 [美国及其亚洲盟友计划利用疫苗战略抗衡中国影响力](/articles/ft/1045952.md)
 
