--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-8 [恰妮斯虫 | 对不起，换酒书店要提前说再见啦](/articles/cdt/382845.md)
+
 5-8 [金屏媒｜女子被强奸后报警，却遭遇比被强奸更大的身心伤害](/articles/cdt/382846.md)
 
 5-8 [每日一语（测试） 5.8](/articles/cdt/382848.md)
@@ -598,6 +600,4 @@
 4-6 [在人间 | “反日”游行9年后，被“爱国”青年用U型锁砸碎的两个家庭](/articles/cdt/384087.md)
 
 4-6 [国际新闻界｜“春天的花开秋天的风”：社交媒体、集体悼念与延展性情感空间 ——以李文亮微博评论（2020-2021）为例的计算传播分析](/articles/cdt/384088.md)
-
-4-6 [【立此存照】教育部发文！12种类型的读物禁止进入校园](/articles/cdt/384089.md)
 
