--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-9 [东耶路撒冷爆冲突 美吁缓解紧张局势 – 法国国际广播电台 - RFI](/articles/rfi/1030257.md)
+
+5-9 [长征火箭残骸坠落  不太可能落在人口密集处 – 法国国际广播电台 - RFI](/articles/rfi/1030258.md)
+
+5-9 [2025：解放军犯台或打空海特种登陆战](/articles/rfi/1030259.md)
+
 5-8 [美国提议豁免疫苗专利 欧盟等待明确细节 – 法国国际广播电台 - RFI](/articles/rfi/1030260.md)
 
 5-8 [教宗支持豁免疫苗专利 促进贫穷国家疫苗供应 – 法国国际广播电台 - RFI](/articles/rfi/1030261.md)
@@ -594,10 +600,4 @@
 5-4 [布林肯伦敦会见日韩外长 日美重申台湾海峡和平稳定重要性](/articles/rfi/1030555.md)
 
 5-4 [融资困难 卡梅伦将放弃建立英中投资基金计划](/articles/rfi/1030556.md)
-
-5-4 [澳洲防长誓言将更多地公开探讨中国问题](/articles/rfi/1030557.md)
-
-5-4 [印度和欧盟将签署连通性协议 双边贸易谈判拟将重启](/articles/rfi/1030558.md)
-
-5-4 [布达佩斯市长反对复旦大学在该市建校 称有国安风险](/articles/rfi/1030559.md)
 
