--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [伊拉克联军基地遭到无人机攻击](/articles/voa/1040931.md)
+
 5-9 [美国将加入打击网络暴力的“基督城呼吁”行动](/articles/voa/1040932.md)
 
 5-9 [香港民调：近6成人反对修改选制 学者指投白票废票率或创新高](/articles/voa/1040933.md)
@@ -598,6 +600,4 @@
 4-27 [赵婷成奥斯卡首位有色人种女性最佳导演](/articles/voa/1041229.md)
 
 4-27 [香港变牢笼？活动人士担心政府修订入境条例或影响出入境自由](/articles/voa/1041230.md)
-
-4-27 [澳大利亚新防长：“不应低估”台海冲突的可能性](/articles/voa/1041231.md)
 
