--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-9 [美国燃油管道公司遭网攻，被迫关闭管道系统](/articles/voa/1040929.md)
+
+5-9 [阿富汗学校遭到攻击，至少40人被炸死](/articles/voa/1040930.md)
+
 5-9 [伊拉克联军基地遭到无人机攻击](/articles/voa/1040931.md)
 
 5-9 [美国将加入打击网络暴力的“基督城呼吁”行动](/articles/voa/1040932.md)
@@ -596,8 +600,4 @@
 4-27 [美宇航局“机智号”第三次火星飞行成功 航速航程创纪录](/articles/voa/1041227.md)
 
 4-27 [香港各界关注记者查册被判罪成 忧港府收紧公司查册损金融中心声誉](/articles/voa/1041228.md)
-
-4-27 [赵婷成奥斯卡首位有色人种女性最佳导演](/articles/voa/1041229.md)
-
-4-27 [香港变牢笼？活动人士担心政府修订入境条例或影响出入境自由](/articles/voa/1041230.md)
 
