--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-9 [Matters | 港人流亡日记：永不消散的迷茫](/articles/cdt/382841.md)
+
 5-9 [全现在 | 把100公斤脏话铺满一座山，他们用行动证明网暴的可怕](/articles/cdt/382843.md)
 
 5-8 [恰妮斯虫 | 对不起，换酒书店要提前说再见啦](/articles/cdt/382845.md)
@@ -598,6 +600,4 @@
 4-6 [【网络民议】“展示高昂的治疗费用可以促进癌症自愈”](/articles/cdt/384084.md)
 
 4-6 [爱思｜周玉亮：网络风暴是如何形成的，以及社交媒体上以讹传讹是如何产生的？](/articles/cdt/384086.md)
-
-4-6 [在人间 | “反日”游行9年后，被“爱国”青年用U型锁砸碎的两个家庭](/articles/cdt/384087.md)
 
