--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-9 [俄罗斯为何摆出攻打乌克兰的架势？](/articles/dw/1042582.md)
+
 5-8 [德语媒体：西方需要反中新联盟](/articles/dw/1042583.md)
 
 5-8 [歐盟領導人對「是否豁免新冠疫苗專利」產生分歧](/articles/dw/1042584.md)
@@ -598,6 +600,4 @@
 4-20 [德语媒体：中美的暂时休战](/articles/dw/1042880.md)
 
 4-20 [乍得总统前线阵亡](/articles/dw/1042881.md)
-
-4-20 [你還在吃台灣鳳梨嗎？](/articles/dw/1042882.md)
 
