--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-9 [尖椒部落 | 今天，我想和你谈谈不做母亲的自由](/articles/cdt/382819.md)
+
 5-9 [【CDTV】无名的小雷：被中国警察抓的那一次，跟大家分享一下故事](/articles/cdt/382824.md)
 
 5-9 [看完烧毁 | 胡锡进的困境](/articles/cdt/382826.md)
@@ -598,6 +600,4 @@
 4-7 [老鼠会 | 第三帝国的两面人](/articles/cdt/384064.md)
 
 4-7 [【旧闻重温】孙立平：原敌意识：没来由地对他人抱有敌意](/articles/cdt/384065.md)
-
-4-6 [吴主任｜离婚冷静期成效是真TM明显](/articles/cdt/384081.md)
 
