--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-9 [德甲赛季近尾声  拜仁实现九连冠](/articles/dw/1042574.md)
+
 5-9 [中国运载火箭残骸坠入印度洋](/articles/dw/1042575.md)
 
 5-9 [调查：德国社会普遍存在对亚裔歧视](/articles/dw/1042576.md)
@@ -598,6 +600,4 @@
 4-21 [被收养的孩子，该不该寻根？](/articles/dw/1042872.md)
 
 4-21 [台积电创办人张忠谋：台湾应守住半导体制造](/articles/dw/1042873.md)
-
-4-21 [Wirecard丑闻: 德国何以会如此出丑？](/articles/dw/1042874.md)
 
