--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -27,6 +27,8 @@
 
 5-8 [六神磊磊 | 鲁迅文章里的一句话](/articles/cdt/382856.md)
 
+5-9 [【CDT敏感词周报】第二十三期：噗噗熊、中印点火、快牙](/articles/cdt/382857.md)
+
 5-7 [【敏感词库】“上海迪士尼噗噗熊被打”禁转禁评](/articles/cdt/382871.md)
 
 5-7 [【404文库】《何以为家》导演自述：关于创作缘由、一点回应和许多感谢](/articles/cdt/382874.md)
@@ -598,6 +600,4 @@
 4-7 [界面文化 | 差评、举报信与豆瓣“一星运动”：自发反抗如何走向以暴制暴？| 思想界](/articles/cdt/384063.md)
 
 4-7 [老鼠会 | 第三帝国的两面人](/articles/cdt/384064.md)
-
-4-7 [【旧闻重温】孙立平：原敌意识：没来由地对他人抱有敌意](/articles/cdt/384065.md)
 
