--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-9 [美国放弃疫苗专利 希望造福世界，而非推动中国生物技术](/articles/voa/1040924.md)
+
+5-9 [中国火箭残骸坠落印度洋 美国宇航局批评中方不负责任](/articles/voa/1040925.md)
+
+5-9 [新冠是否源于武汉实验室 美国会共和党人要求解密文件](/articles/voa/1040926.md)
+
 5-9 [中国称火箭残片落入马尔代夫以西印度洋](/articles/voa/1040927.md)
 
 5-9 [“汉人是中国的白人吗?”：美国种族议题引发部分汉人反思](/articles/voa/1040928.md)
@@ -594,10 +600,4 @@
 4-27 [最新CWUR世界大学排名：哈佛蝉联榜首，清华排名58](/articles/voa/1041222.md)
 
 4-27 [啦啦队女生校外社媒骂脏话 学校管得着吗？美最高法院将要断案](/articles/voa/1041223.md)
-
-4-27 [白宫要义: 白宫: 未来两个月提供外国美制AZ疫苗，正协助印度取得氧气与新冠物资](/articles/voa/1041224.md)
-
-4-27 [警察肖文被定罪后 美司法部宣布对第二个警察局展开调查](/articles/voa/1041225.md)
-
-4-27 [时事大家谈: 孙大午集团遭“满门抄斩”，所犯何罪？](/articles/voa/1041226.md)
 
