--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-9 [阿富汗首都学校爆炸丧生人数已近60](/articles/voa/1040922.md)
+
 5-9 [中共出台反间谍新规 外企经营更具挑战性](/articles/voa/1040923.md)
 
 5-9 [美国放弃疫苗专利 希望造福世界，而非推动中国生物技术](/articles/voa/1040924.md)
@@ -598,6 +600,4 @@
 4-27 [美国人口普查新数据出笼 南部和西部诸州将增加众议院席位](/articles/voa/1041220.md)
 
 4-27 [美国欢迎英国政府建立全球反腐败制裁机制](/articles/voa/1041221.md)
-
-4-27 [最新CWUR世界大学排名：哈佛蝉联榜首，清华排名58](/articles/voa/1041222.md)
 
