--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-9 [“胜利日”红场阅兵 普京称坚决捍卫国家利益](/articles/dw/1042568.md)
+
 5-9 [感染率持续走低 德国今夏有望开放旅游](/articles/dw/1042569.md)
 
 5-9 [新冠时期的母亲节：德国妈妈们的家务负担加重](/articles/dw/1042570.md)
@@ -598,6 +600,4 @@
 4-21 [专访：“欧盟必须向黑山伸出救助之手”](/articles/dw/1042866.md)
 
 4-21 [菅义伟再谈台湾：根本没有预设军事参与](/articles/dw/1042867.md)
-
-4-21 [另立门户？谈何容易！欧洲超级联赛项目受重挫](/articles/dw/1042868.md)
 
