--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-10 [白宫：美国抗击新冠病毒已经“走出困境”](/articles/voa/1040918.md)
+
+5-10 [普京出席纪念二战胜利阅兵式 警告“纳粹意识正在重新抬头”](/articles/voa/1040919.md)
+
 5-10 [国际政局突变 安全因素或成为普京对华能源外交新卖点](/articles/voa/1040920.md)
 
 5-10 [印度单日新冠肺炎死亡人数继续破纪录 疫苗氧气供应短缺](/articles/voa/1040921.md)
@@ -596,8 +600,4 @@
 4-27 [百老汇员工接种疫苗期待风华重现](/articles/voa/1041216.md)
 
 4-27 [埃尔多安要求拜登撤销有关亚美尼亚种族灭绝的宣布](/articles/voa/1041217.md)
-
-4-27 [美最高法院受理家外自卫持枪权案](/articles/voa/1041218.md)
-
-4-27 [弗吉尼亚州大型接种中心外 人们期待疫苗后的生活](/articles/voa/1041219.md)
 
