--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-10 [喀布尔爆炸死亡人数升至63人 塔利班头目欢呼美军和北约部队撤离](/articles/voa/1040917.md)
+
 5-10 [白宫：美国抗击新冠病毒已经“走出困境”](/articles/voa/1040918.md)
 
 5-10 [普京出席纪念二战胜利阅兵式 警告“纳粹意识正在重新抬头”](/articles/voa/1040919.md)
@@ -598,6 +600,4 @@
 4-27 [拜登总统就任百天 将对国会发表演说](/articles/voa/1041215.md)
 
 4-27 [百老汇员工接种疫苗期待风华重现](/articles/voa/1041216.md)
-
-4-27 [埃尔多安要求拜登撤销有关亚美尼亚种族灭绝的宣布](/articles/voa/1041217.md)
 
