--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-10 [调查：新冠期间德国近半亚裔受访者遭遇种族歧视](/articles/rfi/1030207.md)
+
+5-10 [“端点星”网站志工陈玫蔡伟案将在11日上午9时开庭](/articles/rfi/1030208.md)
+
+5-10 [阿富汗恐袭和巴以冲突：美国战略重心转移计划面临考验 - 要闻分析](/articles/rfi/1030209.md)
+
 5-10 [东耶路撒冷冲突加大以色列组阁难度](/articles/rfi/1030210.md)
 
 5-10 [突尼西亚吁安理会讨论耶路撒冷紧张情势 – 法国国际广播电台 - RFI](/articles/rfi/1030211.md)
@@ -594,10 +600,4 @@
 5-4 [法国军事专家评美中南中国海对阵与台湾的重要性 - 要闻解说](/articles/rfi/1030505.md)
 
 5-4 [俄罗斯雇佣军在中非侵权 受害者打破沉默 法广记者调查](/articles/rfi/1030506.md)
-
-5-4 [中国海军船抵巴厘岛海域 将协助印尼打捞潜艇](/articles/rfi/1030507.md)
-
-5-4 [埃及向法国采购30架飙风战机 强化国防实力 – 法国国际广播电台 - RFI](/articles/rfi/1030508.md)
-
-5-4 [印度确诊破2千万  在野党吁全国封城 – 法国国际广播电台 - RFI](/articles/rfi/1030509.md)
 
