--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-10 [科罗拉多州警方称，持枪者杀死6名成人，自杀身亡](/articles/voa/1040916.md)
+
 5-10 [喀布尔爆炸死亡人数升至63人 塔利班头目欢呼美军和北约部队撤离](/articles/voa/1040917.md)
 
 5-10 [白宫：美国抗击新冠病毒已经“走出困境”](/articles/voa/1040918.md)
@@ -598,6 +600,4 @@
 4-27 [海外民运“奥斯卡人权奖”，团体奖荣归全体香港人](/articles/voa/1041214.md)
 
 4-27 [拜登总统就任百天 将对国会发表演说](/articles/voa/1041215.md)
-
-4-27 [百老汇员工接种疫苗期待风华重现](/articles/voa/1041216.md)
 
