--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-10 [一周世界舆论聚焦：美国掀起疫苗外交战](/articles/ft/1045646.md)
+
+5-10 [单杠上的公主和莫扎特咖啡馆的谋杀案](/articles/ft/1045647.md)
+
 5-10 [和美术馆，运营难在哪？](/articles/ft/1045648.md)
 
 5-10 [实现碳中和，中国需更系统的激励体系](/articles/ft/1045649.md)
@@ -596,8 +600,4 @@
 3-5 [英国监管机构对苹果公司展开反垄断调查](/articles/ft/1045944.md)
 
 3-4 [英商界领袖警告提高公司税不利于投资](/articles/ft/1045945.md)
-
-3-4 [每周时事分析：也谈中国人为何多不愿打疫苗](/articles/ft/1045946.md)
-
-3-4 [中国和南非警方破获制售假疫苗犯罪网络](/articles/ft/1045947.md)
 
