--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-10 [佛奇：美国COVID官方染疫死亡数据少算 – 法国国际广播电台 - RFI](/articles/rfi/1030194.md)
+
+5-10 [美警：男嫌闯生日派对枪杀6人后自戕 – 法国国际广播电台 - RFI](/articles/rfi/1030195.md)
+
 5-10 [SpaceX将启动登月任务 接受狗狗币付款 – 法国国际广播电台 - RFI](/articles/rfi/1030196.md)
 
 5-10 [马德里网球公开赛 兹韦列夫拍落贝雷蒂尼封王 – 法国国际广播电台 - RFI](/articles/rfi/1030197.md)
@@ -596,8 +600,4 @@
 5-5 [美国商务部敦促台湾企业提供美汽车业者更多晶片](/articles/rfi/1030492.md)
 
 5-5 [法国政府不明说地向所有人开放疫苗接种？](/articles/rfi/1030493.md)
-
-5-5 [关系恶化  欧盟执委会中止推动批准欧中投资协定 – 法国国际广播电台 - RFI](/articles/rfi/1030494.md)
-
-5-5 [以色列将为内塔尼亚胡时代画上句号](/articles/rfi/1030495.md)
 
