--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-10 [罗斯25分率领 尼克踢馆击沉快艇 – 法国国际广播电台 - RFI](/articles/rfi/1030191.md)
+
+5-10 [日本疫情严峻 大直美：希望就东奥风险仔细讨论 – 法国国际广播电台 - RFI](/articles/rfi/1030192.md)
+
+5-10 [喀布尔爆炸案刚过 塔利班宣布开斋节停火3天 – 法国国际广播电台 - RFI](/articles/rfi/1030193.md)
+
 5-10 [佛奇：美国COVID官方染疫死亡数据少算 – 法国国际广播电台 - RFI](/articles/rfi/1030194.md)
 
 5-10 [美警：男嫌闯生日派对枪杀6人后自戕 – 法国国际广播电台 - RFI](/articles/rfi/1030195.md)
@@ -594,10 +600,4 @@
 5-5 [新冠危机对法国贫困人口造成了怎样的影响？ - 法国世界报](/articles/rfi/1030489.md)
 
 5-5 [欧委会：欧盟暂停敲定欧中投资协议](/articles/rfi/1030490.md)
-
-5-5 [拜登希望6月访欧洲时会晤普京](/articles/rfi/1030491.md)
-
-5-5 [美国商务部敦促台湾企业提供美汽车业者更多晶片](/articles/rfi/1030492.md)
-
-5-5 [法国政府不明说地向所有人开放疫苗接种？](/articles/rfi/1030493.md)
 
