--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-10 [桃李不言，下自成蹊：缔造投资传奇的耶鲁大学师徒](/articles/ft/1045645.md)
+
 5-10 [一周世界舆论聚焦：美国掀起疫苗外交战](/articles/ft/1045646.md)
 
 5-10 [单杠上的公主和莫扎特咖啡馆的谋杀案](/articles/ft/1045647.md)
@@ -598,6 +600,4 @@
 3-5 [零利率是如何挽救并购市场的？](/articles/ft/1045943.md)
 
 3-5 [英国监管机构对苹果公司展开反垄断调查](/articles/ft/1045944.md)
-
-3-4 [英商界领袖警告提高公司税不利于投资](/articles/ft/1045945.md)
 
