--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-10 [“为什么我们该死？”阿富汗少数民族女学生遭屠杀](/articles/nyt/1046882.md)
+
 5-10 [国药疫苗获世卫紧急使用授权，但中国能顺利交付吗？](/articles/nyt/1046883.md)
 
 5-10 [联合国会议美中俄再度交锋，外交僵局难缓解](/articles/nyt/1046884.md)
@@ -598,6 +600,4 @@
 2-18 [中国压制穆斯林行动延伸至三亚](/articles/nyt/1047180.md)
 
 2-18 [简报：孙大午被捕与中国公民社会消亡；中国春节票房飙高](/articles/nyt/1047181.md)
-
-2-18 [孙大午的两次被捕与习近平的威权中国](/articles/nyt/1047182.md)
 
