--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-10 [保护本国民众安全为先 菅义伟称从没把主办奥运会放在首位](/articles/voa/1040914.md)
+
 5-10 [喀布尔几十名女校学生遇袭被害 中国不谴责塔利班反而责怪美国](/articles/voa/1040915.md)
 
 5-10 [科罗拉多州警方称，持枪者杀死6名成人，自杀身亡](/articles/voa/1040916.md)
@@ -598,6 +600,4 @@
 4-27 [前美国安官员：台海正处“极限危险”时刻，台须有抵抗中国意志](/articles/voa/1041212.md)
 
 4-27 [美国务卿视讯访问非洲两大国 努力展示美国合作模式比中国优越](/articles/voa/1041213.md)
-
-4-27 [海外民运“奥斯卡人权奖”，团体奖荣归全体香港人](/articles/voa/1041214.md)
 
