--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-10 [清醒派｜被强奸之后要不要报警，这事又扯上了男女对立甚至国家分裂](/articles/cdt/382790.md)
+
 5-10 [【网络民议】深圳打工人每天能坐到末班地铁，背后的原因很暖心？](/articles/cdt/382798.md)
 
 5-10 [北青深一度 | 一条火化信息，牵出8起“盲井”案](/articles/cdt/382805.md)
@@ -598,6 +600,4 @@
 4-7 [懂事会大王｜大家都是割韭菜的，拼多多能不能专业点啊](/articles/cdt/384047.md)
 
 4-7 [回归常识｜完美！这下彻底“脱离群众”了](/articles/cdt/384048.md)
-
-4-7 [【CDTV】夏至工作室｜一个“网络喷子”的自白](/articles/cdt/384051.md)
 
