--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-10 [美国科罗拉多发生枪击血案 6人死亡](/articles/dw/1042564.md)
+
 5-10 [阿富汗学校爆炸  中国：美撤军威胁当地稳定](/articles/dw/1042565.md)
 
 5-10 [大国梦魇：德国还有哪些“第三帝国”建筑](/articles/dw/1042566.md)
@@ -598,6 +600,4 @@
 4-21 [英国女王伊丽莎白二世迎来95岁寿辰](/articles/dw/1042862.md)
 
 4-21 [欧盟就2030年气候目标达成一致](/articles/dw/1042863.md)
-
-4-21 [大赦国际：全球死刑数量创十年来最低](/articles/dw/1042864.md)
 
