--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-10 [下周访美 文在寅希望任期最后一年实现半岛永久和平](/articles/voa/1040913.md)
+
 5-10 [保护本国民众安全为先 菅义伟称从没把主办奥运会放在首位](/articles/voa/1040914.md)
 
 5-10 [喀布尔几十名女校学生遇袭被害 中国不谴责塔利班反而责怪美国](/articles/voa/1040915.md)
@@ -598,6 +600,4 @@
 4-27 [美国贸易代表与药商商讨暂停疫苗专利保护 药商担心中俄受益](/articles/voa/1041211.md)
 
 4-27 [前美国安官员：台海正处“极限危险”时刻，台须有抵抗中国意志](/articles/voa/1041212.md)
-
-4-27 [美国务卿视讯访问非洲两大国 努力展示美国合作模式比中国优越](/articles/voa/1041213.md)
 
