--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,13 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-10 [网络传播杂志｜关于腾讯手机管家等84款App违法违规收集使用个人信息情况的通报](/articles/cdt/382767.md)
+
 5-10 [清醒派｜被强奸之后要不要报警，这事又扯上了男女对立甚至国家分裂](/articles/cdt/382790.md)
 
 5-10 [【网络民议】深圳打工人每天能坐到末班地铁，背后的原因很暖心？](/articles/cdt/382798.md)
+
+5-10 [【CDT周报】第十六期：十年前过去了，究竟是胡锡进变了，还是这个时代变了？](/articles/cdt/382799.md)
 
 5-10 [北青深一度 | 一条火化信息，牵出8起“盲井”案](/articles/cdt/382805.md)
 
@@ -596,8 +600,4 @@
 4-8 [宋小二的咸菜罐 | 我要为喝农药自杀的卡车司机说句话](/articles/cdt/384041.md)
 
 4-7 [【CDT推荐】本周推荐媒体](/articles/cdt/384044.md)
-
-4-7 [懂事会大王｜大家都是割韭菜的，拼多多能不能专业点啊](/articles/cdt/384047.md)
-
-4-7 [回归常识｜完美！这下彻底“脱离群众”了](/articles/cdt/384048.md)
 
