--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-10 [对所有消费品都可以重做的“火热时代”的冷思考](/articles/ft/1045643.md)
+
 5-10 [不应让Facebook“最高法院”为自由表达划界](/articles/ft/1045644.md)
 
 5-10 [桃李不言，下自成蹊：缔造投资传奇的耶鲁大学师徒](/articles/ft/1045645.md)
@@ -598,6 +600,4 @@
 3-5 [美食潮流：新语言料理](/articles/ft/1045941.md)
 
 3-5 [我们是明天：Jim 的店和历史上最畅销的唱片](/articles/ft/1045942.md)
-
-3-5 [零利率是如何挽救并购市场的？](/articles/ft/1045943.md)
 
