--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-10 [【麻辣总局】在女仆店听到一首词很像“习近平习近平习近平”的歌](/articles/cdt/382763.md)
+
+5-10 [三联生活周刊｜“宠物盲盒”事件：畸形的消费谋杀](/articles/cdt/382764.md)
+
 5-10 [网络传播杂志｜关于腾讯手机管家等84款App违法违规收集使用个人信息情况的通报](/articles/cdt/382767.md)
 
 5-10 [清醒派｜被强奸之后要不要报警，这事又扯上了男女对立甚至国家分裂](/articles/cdt/382790.md)
@@ -596,8 +600,4 @@
 4-8 [【网络民议】 货车司机因北斗掉线被罚款扣车后服毒自杀](/articles/cdt/384038.md)
 
 4-8 [二湘的九维空间 | 方方：这几天，心里颇有温暖感，人间其实还有那么多美好](/articles/cdt/384040.md)
-
-4-8 [宋小二的咸菜罐 | 我要为喝农药自杀的卡车司机说句话](/articles/cdt/384041.md)
-
-4-7 [【CDT推荐】本周推荐媒体](/articles/cdt/384044.md)
 
