--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+5-10 [针对中国？美军演习无人机群首次摧毁舰艇](/articles/rfi/1030149.md)
+
+5-10 [习近平促增强做中国人的骨气和底气](/articles/rfi/1030150.md)
+
+5-10 [奈及利亚尼日州发生翻船事故 30人溺毙 – 法国国际广播电台 - RFI](/articles/rfi/1030151.md)
+
+5-10 [缅甸：政变将满百天 动荡结束无期 - 要闻解说](/articles/rfi/1030152.md)
+
 5-10 [遭控6罪名 翁山苏姬24日首次亲自出庭受审 – 法国国际广播电台 - RFI](/articles/rfi/1030153.md)
 
 5-10 [巴西总统带领支持者骑机车游行 称抗疫渐取得胜利 – 法国国际广播电台 - RFI](/articles/rfi/1030154.md)
@@ -592,12 +600,4 @@
 5-5 [川普脸书帐号封杀令 监督委员会宣布继续停权 – 法国国际广播电台 - RFI](/articles/rfi/1030447.md)
 
 5-5 [伦敦G7外长会议最后一天重点谈疫苗](/articles/rfi/1030448.md)
-
-5-5 [港府为补过 封杀公司须跟身份证](/articles/rfi/1030449.md)
-
-5-5 [美日韩外长伦敦会谈 吁维护朝鲜半岛稳定 – 法国国际广播电台 - RFI](/articles/rfi/1030450.md)
-
-5-5 [法国在争议中纪念拿破仑逝世200周年](/articles/rfi/1030451.md)
-
-5-5 [救助穷国 G7外长将讨论分享库存疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1030452.md)
 
