--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-10 [严防死堵 “隔离线”登上珠穆朗玛峰](/articles/voa/1040910.md)
+
 5-10 [基督教网络空间被挤压 习思想登堂入室渗透教会讲道](/articles/voa/1040911.md)
 
 5-10 [习近平战略机遇期 促使台海“热区”步步升温？](/articles/voa/1040912.md)
@@ -598,6 +600,4 @@
 4-27 [中国3月工业企业利润同比增长近一倍 原材料价格上涨加大企业压力成本](/articles/voa/1041208.md)
 
 4-27 [力拼碳中和 环保人士呼吁中国检讨海外煤电厂计划](/articles/voa/1041209.md)
-
-4-27 [台学者：台湾国际团结法案将为台湾的生存发展跨出一大步](/articles/voa/1041210.md)
 
