--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-10 [马英九吁重回“九二共识”   邱垂正：历史已翻页](/articles/rfa/1045641.md)
+
+5-10 [海外蒙古族东京游行  600人纪念“莫日根事件”十周年](/articles/rfa/1045642.md)
+
+5-10 [维权律师余文生 覃永沛 母亲节与至亲团聚](/articles/rfa/1045643.md)
+
 5-10 [废止中国大陆时代军制 台湾“军团”将改“作战区”](/articles/rfa/1045644.md)
 
 5-10 [北京官员入主香港文化央企   社团及教育界将成下个目标](/articles/rfa/1045645.md)
@@ -594,10 +600,4 @@
 4-7 [日本态度大转弯  欲与美合作促台海和平](/articles/rfa/1045939.md)
 
 4-7 [专访罗谷: 中国农民工是被党利用的“二等公民”](/articles/rfa/1045940.md)
-
-4-7 [缅甸局势恶化  中国怎能独善其身？](/articles/rfa/1045941.md)
-
-4-7 [中国网络暴力猎巫    女权博主纷纷炸号](/articles/rfa/1045942.md)
-
-4-7 [反制中国掠夺资源   加拿大将保护并开发稀有矿产](/articles/rfa/1045943.md)
 
