--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-11 [报道称中国曾讨论萨斯病毒武器化](/articles/voa/1040905.md)
+
+5-11 [中国正努力试图实现半导体芯片自给自足 但困难重重](/articles/voa/1040906.md)
+
+5-11 [蔡英文哥本哈根峰会演说：威权势力正扩张，全球须共同守护民主](/articles/voa/1040907.md)
+
 5-10 [印度新冠肺炎疫情虽微趋缓 仍接近破纪录高位](/articles/voa/1040908.md)
 
 5-10 [因备份疫情文章被控罪的北京公益志愿者陈玫、蔡伟案将受审](/articles/voa/1040909.md)
@@ -594,10 +600,4 @@
 4-28 [林郑月娥亲自披挂上阵 主持电视节目讨论“完善香港选举制度”](/articles/voa/1041203.md)
 
 4-28 [切尔诺贝利核事故35年 乌克兰公布克格勃档案](/articles/voa/1041204.md)
-
-4-28 [日本外交蓝皮书：支持台湾参与世卫大会，担忧中国持续扩张军力](/articles/voa/1041205.md)
-
-4-28 [澳大利亚官员提醒民主国家：战争的鼓声已经敲响](/articles/voa/1041206.md)
-
-4-27 [中国气候应对的双标：国内承诺减排，国外大力扩排](/articles/voa/1041207.md)
 
