--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-11 [欧洲下班时间到：世卫未发邀请台湾函 称由194个会员国考虑和决定](/articles/rfi/1030137.md)
+
+5-11 [外媒称中国美团王兴抄诗“刘项原来不读书”遭指暗喻国家主席不读书？股价大跌还有约谈](/articles/rfi/1030138.md)
+
 5-11 [巴以阿克萨清真寺前再爆冲突 添300多伤](/articles/rfi/1030139.md)
 
 5-10 [日媒核解密：冷战时期冲绳美军曾实施核弹搬运训练](/articles/rfi/1030140.md)
@@ -596,8 +600,4 @@
 5-6 [土耳其外长准备访问沙特修补双边关系](/articles/rfi/1030435.md)
 
 5-6 [法国世界报；采取零新冠策略的国家比要和新冠病毒共存的国家胜算 - 法国世界报](/articles/rfi/1030436.md)
-
-5-6 [香港电台开始下架 网民动员备份 保护历史](/articles/rfi/1030437.md)
-
-5-6 [印度学生在欧洲：八千公里外的担忧](/articles/rfi/1030438.md)
 
