--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-11 [香港支联会街站派蜡烛坚持悼念六四 吁市民两手准备烛光遍地开花](/articles/voa/1040902.md)
+
+5-11 [拜登参加北约东欧成员国峰会 讨论乌克兰安全问题及中国影响](/articles/voa/1040903.md)
+
+5-11 [澳中关系持续紧张 澳大利亚液化气成为下一个两国关系恶化牺牲品？](/articles/voa/1040904.md)
+
 5-11 [报道称中国曾讨论萨斯病毒武器化](/articles/voa/1040905.md)
 
 5-11 [中国正努力试图实现半导体芯片自给自足 但困难重重](/articles/voa/1040906.md)
@@ -594,10 +600,4 @@
 4-28 [中国国安部发新规，强化反间谍意识，鼓励民众检举揭发](/articles/voa/1041200.md)
 
 4-28 [时事大家谈: 习近平长期执政下，中共是否会重蹈接班人危机？](/articles/voa/1041201.md)
-
-4-28 [美前总统奥巴马谴责缅甸军事政变，缅军政府：恢复稳定在前 考虑东盟建议在后](/articles/voa/1041202.md)
-
-4-28 [林郑月娥亲自披挂上阵 主持电视节目讨论“完善香港选举制度”](/articles/voa/1041203.md)
-
-4-28 [切尔诺贝利核事故35年 乌克兰公布克格勃档案](/articles/voa/1041204.md)
 
