--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-11 [外卖骑手：陷入算法困境  被资本剥削到极致](/articles/rfa/1045638.md)
+
 5-11 [“美团”CEO发唐诗后速删   或步马云后尘？](/articles/rfa/1045639.md)
 
 5-11 [欧盟印度重启自贸谈判  签署欧亚连结协议抗衡一带一路](/articles/rfa/1045640.md)
@@ -598,6 +600,4 @@
 4-7 [抵制外国品牌热炒国货敛财   匪夷所思之举折射社会现状](/articles/rfa/1045936.md)
 
 4-7 [中国官媒高调宣传辽宁舰 台外长批“自欺欺人”](/articles/rfa/1045937.md)
-
-4-7 [武汉清明墓园人满为患  律师吁公开疫苗信息](/articles/rfa/1045938.md)
 
