--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-11 [FBI确认“黑暗面”勒索软件对殖民管道网络遇袭负责 白宫或就是否支付赎金提供建议](/articles/voa/1040900.md)
+
+5-11 [时事大家谈: 习近平与巴赫通电话，冬奥会能否缓解习近平政治困局？](/articles/voa/1040901.md)
+
 5-11 [香港支联会街站派蜡烛坚持悼念六四 吁市民两手准备烛光遍地开花](/articles/voa/1040902.md)
 
 5-11 [拜登参加北约东欧成员国峰会 讨论乌克兰安全问题及中国影响](/articles/voa/1040903.md)
@@ -596,8 +600,4 @@
 4-28 [美国政府放松有关户外戴口罩的指导原则](/articles/voa/1041198.md)
 
 4-28 [香港警方指民阵涉违反社团条例 成员质疑有政治目的或铺排取缔](/articles/voa/1041199.md)
-
-4-28 [中国国安部发新规，强化反间谍意识，鼓励民众检举揭发](/articles/voa/1041200.md)
-
-4-28 [时事大家谈: 习近平长期执政下，中共是否会重蹈接班人危机？](/articles/voa/1041201.md)
 
