--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-11 [康奈尔大学学生集会 声援维吾尔人反对种族灭绝](/articles/rfa/1045633.md)
+
+5-11 [“端点星”案即将开审  陈玫、蔡伟家属吁“孩子无罪，判一天都不行”](/articles/rfa/1045634.md)
+
 5-11 [香港新移民抗争者妮珂返深圳探亲  至今下落不明](/articles/rfa/1045635.md)
 
 5-11 [中国官方为何抨击联合国涉疆活动](/articles/rfa/1045636.md)
@@ -596,8 +600,4 @@
 4-8 [不满战狼外交批评政治人物 土耳其传召中国大使](/articles/rfa/1045931.md)
 
 4-7 [蔡英文宣示要改革百年老店台铁](/articles/rfa/1045932.md)
-
-4-7 [吉林残障访民脑溢血命危   家属称追究到底](/articles/rfa/1045933.md)
-
-4-7 [清明节毛泽东妻墓地开放   民间自发抵制文革回潮](/articles/rfa/1045934.md)
 
