--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [哈马斯向耶路撒冷发射火箭 以色列空袭加沙](/articles/voa/1040898.md)
+
 5-11 [世卫组织：印度出现的新冠病毒变种令全球关注](/articles/voa/1040899.md)
 
 5-11 [FBI确认“黑暗面”勒索软件对殖民管道网络遇袭负责 白宫或就是否支付赎金提供建议](/articles/voa/1040900.md)
@@ -598,6 +600,4 @@
 4-28 [反对病毒溯源和普世人权：中俄据报对世卫文件草案提出异议](/articles/voa/1041196.md)
 
 4-28 [全球多名政要支持台湾参与世界卫生大会](/articles/voa/1041197.md)
-
-4-28 [美国政府放松有关户外戴口罩的指导原则](/articles/voa/1041198.md)
 
