--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-11 [自由亚洲 | “端点星”案即将开审  陈玫、蔡伟家属吁“孩子无罪，判一天都不行”](/articles/cdt/382739.md)
+
 5-11 [端传媒 | 学者粉圈、民粹动员与流量经济：当民族主义学者沈逸“网暴”胡锡进](/articles/cdt/382743.md)
 
 5-11 [曹教授 | 警惕全社会正在滑向掩盖真相死不认错的边缘](/articles/cdt/382745.md)
@@ -598,6 +600,4 @@
 4-8 [【图说天朝】人民公仆为人民累坏了身体 把疫苗接种机会让给了人民](/articles/cdt/384012.md)
 
 4-8 [全现在｜对话制造“淄博火锅鱼”的艺术家坚果兄弟：用荒诞抵抗荒诞](/articles/cdt/384013.md)
-
-4-8 [三联生活周刊｜虎扑，“直男”避风港？](/articles/cdt/384014.md)
 
