--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-11 [美国批准为12岁至15岁未成年人接种辉瑞新冠疫苗](/articles/voa/1040895.md)
+
+5-11 [中共官媒系列文章批美人权“双重标准” 美参议员抨击习近平散布“假象等值”宣传](/articles/voa/1040896.md)
+
 5-11 [北京称蔡英文丹麦民主峰会讲话为“政治闹剧” 丹麦外相说普世价值观越受压力越要站稳](/articles/voa/1040897.md)
 
 5-11 [哈马斯向耶路撒冷发射火箭 以色列空袭加沙](/articles/voa/1040898.md)
@@ -596,8 +600,4 @@
 4-28 [白宫要义: 拜登: 完全接种疫苗者可卸口罩；提供生产疫苗机器零件给印度](/articles/voa/1041193.md)
 
 4-28 [日本抗议中国公布尖阁诸岛测量图](/articles/voa/1041194.md)
-
-4-28 [美参议院推迟讨论一项与中国进行科技竞争的重大法案](/articles/voa/1041195.md)
-
-4-28 [反对病毒溯源和普世人权：中俄据报对世卫文件草案提出异议](/articles/voa/1041196.md)
 
