--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-11 [向12到15岁注射辉瑞疫苗 欧盟药管局：近期将批准 – 法国国际广播电台 - RFI](/articles/rfi/1030127.md)
+
+5-11 [新疆议题视讯会议将登场 中国吁联合国会员国抵制 – 法国国际广播电台 - RFI](/articles/rfi/1030128.md)
+
 5-11 [成千上万的游客前往红色“圣地”延安朝圣，提前庆祝中共成立一百周年](/articles/rfi/1030129.md)
 
 5-11 [中国频频展现和印度团结的姿态，但外表有时是具有欺骗性的 - 法国世界报](/articles/rfi/1030130.md)
@@ -596,8 +600,4 @@
 5-6 [NBA篮网球星厄文数度拒媒体 NBA再罚近百万元 – 法国国际广播电台 - RFI](/articles/rfi/1030425.md)
 
 5-6 [哥伦比亚反政府示威迈入第2周 警射催泪弹镇压 – 法国国际广播电台 - RFI](/articles/rfi/1030426.md)
-
-5-6 [黄之锋六四非法集结罪成 判刑10个月 – 法国国际广播电台 - RFI](/articles/rfi/1030427.md)
-
-5-6 [中国：无限期暂停中澳战略经济对话机制活动 – 法国国际广播电台 - RFI](/articles/rfi/1030428.md)
 
