--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [接种疫苗后89岁纽约老翁渴望参加舞会](/articles/voa/1040892.md)
+
 5-11 [拜登：导致美国燃油管道中断的勒索软件攻击是“犯罪行为”](/articles/voa/1040893.md)
 
 5-11 [伊朗快艇霍尔木兹海峡骚扰美舰 美海警巡逻舰开火示警](/articles/voa/1040894.md)
@@ -598,6 +600,4 @@
 4-28 [“真诚交谈”：拜登国会演说后参议员斯科特将代表共和党回应](/articles/voa/1041190.md)
 
 4-28 [美将放松因疫情而对中国和其他国际学生实施的入境限制](/articles/voa/1041191.md)
-
-4-28 [哨兵行动：拜登政府宣布打击人口贩运组织](/articles/voa/1041192.md)
 
