--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-11 [【立此存照】“请画下成都49中的事情吧” 乌合麒麟：现在画太草率](/articles/cdt/382727.md)
+
 5-11 [【网络民议】教育局通报成都四十九中学生坠亡：属个人行为](/articles/cdt/382738.md)
 
 5-11 [自由亚洲 | “端点星”案即将开审  陈玫、蔡伟家属吁“孩子无罪，判一天都不行”](/articles/cdt/382739.md)
@@ -598,6 +600,4 @@
 4-9 [【CDTV】一个卡车司机的愤怒：对司机们的系统性压榨真的令人忍无可忍！](/articles/cdt/383999.md)
 
 4-8 [硬哥｜“淘宝上便宜的汽车定位设备比北斗系统还要可靠”](/articles/cdt/384003.md)
-
-4-8 [【图说天朝】人民公仆为人民累坏了身体 把疫苗接种机会让给了人民](/articles/cdt/384012.md)
 
