--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-11 [三只金钱豹脱逃多日 杭州动物园遭批瞒报](/articles/dw/1042548.md)
+
 5-11 [台欧互惠有谱?  蔡英文提半导体合作](/articles/dw/1042549.md)
 
 5-11 [「亵渎联合国」 北京重批德英美涉疆会议](/articles/dw/1042550.md)
@@ -598,6 +600,4 @@
 4-22 [拜登希望就气候问题团结全世界 习近平：不要朝令夕改](/articles/dw/1042846.md)
 
 4-22 [欧中投资协定遭遇强劲阻力](/articles/dw/1042847.md)
-
-4-22 [急刹车：德国传染病防治法增补草案作何规定？](/articles/dw/1042848.md)
 
