--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [驳“东升西降”说 美国杂志“纸龙”论触怒中国官媒](/articles/voa/1040890.md)
+
 5-11 [中国人口普查结果出炉 劳动人口青黄不接状况继续恶化](/articles/voa/1040891.md)
 
 5-11 [接种疫苗后89岁纽约老翁渴望参加舞会](/articles/voa/1040892.md)
@@ -598,6 +600,4 @@
 4-28 [美海军舰艇向伊朗攻击艇开火示警](/articles/voa/1041188.md)
 
 4-28 [让各界看清中俄的“有害行为” 美军多位高层将领联署呼吁解密情报](/articles/voa/1041189.md)
-
-4-28 [“真诚交谈”：拜登国会演说后参议员斯科特将代表共和党回应](/articles/voa/1041190.md)
 
