--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-11 [中国强迫穆斯林女性节育以降低出生率](/articles/nyt/1046878.md)
+
 5-11 [中国公布人口普查结果：出生率下降，老龄化加剧](/articles/nyt/1046879.md)
 
 5-11 [杭州金钱豹出逃事件：野生动物世界“瞒豹”引质疑](/articles/nyt/1046880.md)
@@ -598,6 +600,4 @@
 2-19 [处在十字路口，国民党能否“现代化”？](/articles/nyt/1047176.md)
 
 2-19 [简报：香港批准紧急使用科兴疫苗；得州停电后再遇水危机](/articles/nyt/1047177.md)
-
-2-18 [WHO调查团队成员：我亲历的武汉病毒溯源调查](/articles/nyt/1047178.md)
 
