--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-11 [蓝鲸财经｜技嘉辱华？京东天猫苏宁等电商平台下架技嘉产品](/articles/cdt/382709.md)
+
+5-11 [丁香医生｜最新数据！中国男性比女性多 3490 万，消失的女性去哪儿了？](/articles/cdt/382712.md)
+
 5-11 [【立此存照】“请画下成都49中的事情吧” 乌合麒麟：现在画太草率](/articles/cdt/382727.md)
 
 5-11 [【网络民议】教育局通报成都四十九中学生坠亡：属个人行为](/articles/cdt/382738.md)
@@ -596,8 +600,4 @@
 4-9 [烟酒小僧 | 《寻找尸体的人》报道被删除风波](/articles/cdt/383992.md)
 
 4-9 [【404文库】极昼工作室｜寻找尸体的人：广东智障男子失踪两年，被杀害后顶替富人火化](/articles/cdt/383997.md)
-
-4-9 [【CDTV】一个卡车司机的愤怒：对司机们的系统性压榨真的令人忍无可忍！](/articles/cdt/383999.md)
-
-4-8 [硬哥｜“淘宝上便宜的汽车定位设备比北斗系统还要可靠”](/articles/cdt/384003.md)
 
