--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-11 [数据归集处｜人口之惑](/articles/cdt/382697.md)
+
+5-11 [骚客文艺｜杭州的豹子找不到了，成都49中真相找不到了](/articles/cdt/382703.md)
+
 5-11 [蓝鲸财经｜技嘉辱华？京东天猫苏宁等电商平台下架技嘉产品](/articles/cdt/382709.md)
 
 5-11 [丁香医生｜最新数据！中国男性比女性多 3490 万，消失的女性去哪儿了？](/articles/cdt/382712.md)
@@ -596,8 +600,4 @@
 4-9 [【404文库】胡锡进｜不要因为我们有14亿人，就认为出一个金德强事件是难免的](/articles/cdt/383989.md)
 
 4-10 [南方人物周刊 | 住在公路上的人：3000万长途货车司机的苦与累](/articles/cdt/383990.md)
-
-4-9 [烟酒小僧 | 《寻找尸体的人》报道被删除风波](/articles/cdt/383992.md)
-
-4-9 [【404文库】极昼工作室｜寻找尸体的人：广东智障男子失踪两年，被杀害后顶替富人火化](/articles/cdt/383997.md)
 
