--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-11 [比尔·盖茨夫妇究竟为何离婚？](/articles/nyt/1046877.md)
+
 5-11 [中国强迫穆斯林女性节育以降低出生率](/articles/nyt/1046878.md)
 
 5-11 [中国公布人口普查结果：出生率下降，老龄化加剧](/articles/nyt/1046879.md)
@@ -598,6 +600,4 @@
 2-19 [特朗普、谣言和煽动：拉什·林博如何影响美国政治](/articles/nyt/1047175.md)
 
 2-19 [处在十字路口，国民党能否“现代化”？](/articles/nyt/1047176.md)
-
-2-19 [简报：香港批准紧急使用科兴疫苗；得州停电后再遇水危机](/articles/nyt/1047177.md)
 
