--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-11 [中国公布人口逾14亿  数据错漏百出引广泛质疑](/articles/rfa/1045632.md)
+
 5-11 [康奈尔大学学生集会 声援维吾尔人反对种族灭绝](/articles/rfa/1045633.md)
 
 5-11 [“端点星”案即将开审  陈玫、蔡伟家属吁“孩子无罪，判一天都不行”](/articles/rfa/1045634.md)
@@ -598,6 +600,4 @@
 4-8 [香港立法会前议员郭荣铿平安抵达加拿大](/articles/rfa/1045930.md)
 
 4-8 [不满战狼外交批评政治人物 土耳其传召中国大使](/articles/rfa/1045931.md)
-
-4-7 [蔡英文宣示要改革百年老店台铁](/articles/rfa/1045932.md)
 
