--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-11 [蔡英文二度受邀哥本哈根峰会演说 中国批“台独头目”违反一中](/articles/rfa/1045630.md)
+
+5-11 [台湾叩关世卫大会再次受阻 邦交国洪都拉斯向中国买疫苗](/articles/rfa/1045631.md)
+
 5-11 [中国公布人口逾14亿  数据错漏百出引广泛质疑](/articles/rfa/1045632.md)
 
 5-11 [康奈尔大学学生集会 声援维吾尔人反对种族灭绝](/articles/rfa/1045633.md)
@@ -596,8 +600,4 @@
 4-8 [香港黎智英等三人就“831非法集结案” 认罪](/articles/rfa/1045928.md)
 
 4-8 [美国务院发言激起抵制北京冬奥辩论](/articles/rfa/1045929.md)
-
-4-8 [香港立法会前议员郭荣铿平安抵达加拿大](/articles/rfa/1045930.md)
-
-4-8 [不满战狼外交批评政治人物 土耳其传召中国大使](/articles/rfa/1045931.md)
 
