--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-11 [中国遭遇生育率断崖式下滑 – 何以拯救人口危机？](/articles/voa/1040886.md)
+
+5-11 [中国美国商会发布白皮书 呼吁中国履行公平竞争承诺](/articles/voa/1040887.md)
+
 5-11 [在华经营困难 美国公司指责中国政府隐含排斥美国产品](/articles/voa/1040888.md)
 
 5-11 [白宫要义: 拜登总统: 攻击美国燃油管的黑客来自俄罗斯境内](/articles/voa/1040889.md)
@@ -596,8 +600,4 @@
 4-28 [学者：中共打压人民信仰自由 与台湾形成鲜明对比](/articles/voa/1041184.md)
 
 4-28 [拜登周三赴国会演说 民主党领袖：盼强调如何与中国对抗和竞争](/articles/voa/1041185.md)
-
-4-28 [拜登政府称头100天联合盟友应对中国的方针初见成效](/articles/voa/1041186.md)
-
-4-28 [泰国活动人士街头遭镇压后转向Clubhouse](/articles/voa/1041187.md)
 
