--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-11 [官称少数民族人口增长远高于汉族    与地方数据背道而驰](/articles/rfa/1045629.md)
+
 5-11 [蔡英文二度受邀哥本哈根峰会演说 中国批“台独头目”违反一中](/articles/rfa/1045630.md)
 
 5-11 [台湾叩关世卫大会再次受阻 邦交国洪都拉斯向中国买疫苗](/articles/rfa/1045631.md)
@@ -598,6 +600,4 @@
 4-8 [孙大午律师“被寻衅”  中国民营企业家怎么活？](/articles/rfa/1045927.md)
 
 4-8 [香港黎智英等三人就“831非法集结案” 认罪](/articles/rfa/1045928.md)
-
-4-8 [美国务院发言激起抵制北京冬奥辩论](/articles/rfa/1045929.md)
 
