--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-11 [香港政府首次购买奥运会电视转播权](/articles/voa/1040885.md)
+
 5-11 [中国遭遇生育率断崖式下滑 – 何以拯救人口危机？](/articles/voa/1040886.md)
 
 5-11 [中国美国商会发布白皮书 呼吁中国履行公平竞争承诺](/articles/voa/1040887.md)
@@ -598,6 +600,4 @@
 4-28 [美参议院核准总统的国防政策次长人选 国防部长称卡尔是制定政策应对中国挑战的正确人选](/articles/voa/1041183.md)
 
 4-28 [学者：中共打压人民信仰自由 与台湾形成鲜明对比](/articles/voa/1041184.md)
-
-4-28 [拜登周三赴国会演说 民主党领袖：盼强调如何与中国对抗和竞争](/articles/voa/1041185.md)
 
