--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-11 [中国争国际话语权  欲与CNN、BBC抗衡](/articles/rfa/1045627.md)
+
 5-11 [王兴吟诗得罪领导层  学者指北京逼民企一起向左转](/articles/rfa/1045628.md)
 
 5-11 [官称少数民族人口增长远高于汉族    与地方数据背道而驰](/articles/rfa/1045629.md)
@@ -598,6 +600,4 @@
 4-8 [北斗系统“掉线”闹出人命   中国定位技术有效性受质疑](/articles/rfa/1045925.md)
 
 4-8 [专访《北京之春》导演：民主墙、星星美展、首曝光的现场镜头](/articles/rfa/1045926.md)
-
-4-8 [孙大午律师“被寻衅”  中国民营企业家怎么活？](/articles/rfa/1045927.md)
 
