--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [美日法澳首次联合军演 应对中国咄咄逼人的行为](/articles/voa/1040877.md)
+
+5-12 [中国生产领域通胀数据4月飙升，全球通胀担忧突然加重](/articles/voa/1040878.md)
+
 5-12 [哥本哈根民主峰会呼唤美国的领导，中国被视为民主的“最大威胁”](/articles/voa/1040879.md)
 
 5-12 [又同中国有关 俄知名海军设计局负责人被判刑](/articles/voa/1040880.md)
@@ -596,8 +600,4 @@
 4-29 [默克尔促北京恢复人权对话，李克强：不要干涉中国内政](/articles/voa/1041175.md)
 
 4-29 [香港通过入境修订条例 出入境自由化为乌有？](/articles/voa/1041176.md)
-
-4-29 [美国政商军界联手帮助印度度过新一波惨烈新冠疫情](/articles/voa/1041177.md)
-
-4-28 [民调：拜登上任后盟友对美国好感度上升，中国却对美国好感度急剧下降](/articles/voa/1041178.md)
 
