--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-12 [电视剧贩卖生育焦虑   难怪中国人不愿生娃](/articles/rfa/1045625.md)
+
 5-12 [世卫抨击中国疫苗外交是地缘政治操纵](/articles/rfa/1045626.md)
 
 5-11 [中国争国际话语权  欲与CNN、BBC抗衡](/articles/rfa/1045627.md)
@@ -598,6 +600,4 @@
 4-8 [台湾立委声援缅甸抗争者 有缅甸人咨询来台寻庇护](/articles/rfa/1045923.md)
 
 4-8 [美中航母先后表态 美国对台是否该转“战略清晰”?](/articles/rfa/1045924.md)
-
-4-8 [北斗系统“掉线”闹出人命   中国定位技术有效性受质疑](/articles/rfa/1045925.md)
 
