--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+5-12 [七家苹果供应商被指使用新疆强迫劳动 苹果称未发现任何证据](/articles/voa/1040865.md)
+
+5-12 [预测新冠病毒爆发热点的工具问世](/articles/voa/1040866.md)
+
+5-12 [美资深参议员询问美国公司向华为出口硬盘驱动器事宜](/articles/voa/1040867.md)
+
+5-12 [共和党议员：拜登官员指改变台海战略模糊会造成不稳是在附和中共](/articles/voa/1040868.md)
+
+5-12 [中国要求抵制讨论维吾尔人权问题的联合国会议](/articles/voa/1040869.md)
+
 5-12 [报道：拜登挑选前芝加哥市长伊曼纽尔担任驻日大使](/articles/voa/1040870.md)
 
 5-12 [新疆太阳能产业或成为下一个“新疆棉”：美中在气候变化领域是否还有合作的必要？](/articles/voa/1040871.md)
@@ -590,14 +600,4 @@
 4-29 [三名试图绑架密歇根州长的男子被控串谋使用大规模杀伤性武器](/articles/voa/1041163.md)
 
 4-29 [VOA连线(张蓉湘): 美军撤离阿富汗对中国的战略含义](/articles/voa/1041164.md)
-
-4-29 [联邦特工搜查前总统特朗普律师朱利安尼的住宅与办公室](/articles/voa/1041165.md)
-
-4-29 [布林肯：把中国官媒列为外国使团不是封锁 是为让公众了解真相](/articles/voa/1041166.md)
-
-4-29 [亚裔美国人2021年继续遭受攻击](/articles/voa/1041167.md)
-
-4-29 [拜登总统提名台湾出生的徐若冰为国防部副部长](/articles/voa/1041168.md)
-
-4-29 [拜登将对国会两院发表演说 提议大规模支付扶持儿童和家庭](/articles/voa/1041169.md)
 
