--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-12 [关于中国人口普查结果，你应该知道的四个要点](/articles/nyt/1046876.md)
+
 5-11 [比尔·盖茨夫妇究竟为何离婚？](/articles/nyt/1046877.md)
 
 5-11 [中国强迫穆斯林女性节育以降低出生率](/articles/nyt/1046878.md)
@@ -598,6 +600,4 @@
 2-19 [针对亚裔的种族主义并不新鲜](/articles/nyt/1047174.md)
 
 2-19 [特朗普、谣言和煽动：拉什·林博如何影响美国政治](/articles/nyt/1047175.md)
-
-2-19 [处在十字路口，国民党能否“现代化”？](/articles/nyt/1047176.md)
 
