--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-12 [以《焚书坑》讽习近平? 美团股价大跌](/articles/dw/1042530.md)
+
+5-12 [汶川大地震：挥不去、抹不掉](/articles/dw/1042531.md)
+
 5-11 [中国公布七普结果：出生率下降、老龄化加剧](/articles/dw/1042532.md)
 
 5-11 [德语媒体： 中国的人口困局](/articles/dw/1042533.md)
@@ -596,8 +600,4 @@
 4-23 [疫情急转直下 印度是否会接受中国伸来的援手？](/articles/dw/1042828.md)
 
 4-23 [改写了美国电影传统的华裔导演赵婷](/articles/dw/1042829.md)
-
-4-23 [默克尔走了 谁来接班？](/articles/dw/1042830.md)
-
-4-23 [“迷失在欧洲 “: 为何成千上万年幼难民消失不见？](/articles/dw/1042831.md)
 
