--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,30 @@
 路透
 ------
 
+5-12 [以色列与哈马斯发生多年来最激烈交火 各有3人和35人死亡](/articles/reuters/1038200.md)
+
+5-12 [主权财富基金去年的直接投资规模几乎翻倍至659亿美元--IFSWF报告](/articles/reuters/1038201.md)
+
+5-12 [马斯克发推调查用户是否支持特斯拉接受狗狗币 支持率近80%](/articles/reuters/1038202.md)
+
+5-12 [焦点：印度疫情恶化拖累第二季原油需求 OPEC将复苏希望寄托在下半年](/articles/reuters/1038203.md)
+
+5-12 [亚股位于一个月低点 通胀焦虑带动卖盘延续](/articles/reuters/1038204.md)
+
+5-12 [菲律宾民都洛岛发生5.8级地震--欧洲地中海地震中心(EMSC)](/articles/reuters/1038205.md)
+
+5-12 [综述：4月就业增长意外放缓 美联储官员各抒己见梳理背后原因](/articles/reuters/1038206.md)
+
+5-12 [洪都拉斯总统称中国在疫苗供应上对盟国有担当 或在中国大陆设办事处购疫苗](/articles/reuters/1038207.md)
+
+5-12 [俄罗斯总统普京提出退出开放天空条约的法案](/articles/reuters/1038208.md)
+
+5-12 [上海医药向大股东及云南白药增发A股筹近144亿元，后者将成第二大股东](/articles/reuters/1038209.md)
+
+5-12 [拜登力求提高疫苗接种率 将与Uber、Lyft合作免费载人去打针](/articles/reuters/1038210.md)
+
+5-12 [美检察官定调亚特兰大按摩店枪击案为种族仇杀 将对嫌犯求处死刑](/articles/reuters/1038211.md)
+
 5-12 [独家：卡塔尔改变LNG扩张策略 将重心转向中国](/articles/reuters/1038212.md)
 
 5-12 [美国参议员正在调查希捷等企业是否违规向华为出售硬盘驱动器](/articles/reuters/1038213.md)
@@ -576,28 +600,4 @@
 5-3 [独家：压力下的特斯拉开始加强与中国监管机构互动--消息](/articles/reuters/1038498.md)
 
 5-3 [东盟+3财金首长联合声明称将动用所有工具确保经济复苏](/articles/reuters/1038499.md)
-
-5-3 [沪深交易所就债券交易规则及配套指引征求意见 优化参与人制度并防范风险](/articles/reuters/1038500.md)
-
-5-3 [中国水滴公司拟通过在纽约证交所IPO筹资3.6亿美元](/articles/reuters/1038501.md)
-
-5-3 [欧央行副总裁：一旦疫苗接种加速至关键水平 可开始逐步退出紧急刺激](/articles/reuters/1038502.md)
-
-5-3 [由于疫情控制措施 2020年线上销售占零售销售比重跃升至19%--联合国](/articles/reuters/1038503.md)
-
-5-3 [近期支持金价回升因素短暂 料未来数季度黄金ETF续净流出--瑞银财富管理](/articles/reuters/1038504.md)
-
-5-3 [新西兰称与中国的分歧变得难以调和 但不必以分歧去定义两国关系](/articles/reuters/1038505.md)
-
-5-3 [中日韩承诺为疫情后经济复苏提供“有针对性”的支持举措](/articles/reuters/1038506.md)
-
-5-3 [一周展望：美股第一季度业绩喜人 暗示今年涨势还有看头](/articles/reuters/1038507.md)
-
-5-3 [图表新闻：全球货币市场基金净流入规模创一年最高--理柏](/articles/reuters/1038508.md)
-
-5-3 [《图表新闻》五大主题：美国非农就业报告、数字人民币和苏格兰选举](/articles/reuters/1038509.md)
-
-5-3 [亚股开盘走势迟缓 市场关注美国数据](/articles/reuters/1038510.md)
-
-5-3 [G7将考虑建立机制 反击俄罗斯的“宣传”--英国外交大臣拉布](/articles/reuters/1038511.md)
 
