--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [国家建筑博物馆焕然一新重新开放](/articles/voa/1040862.md)
+
 5-12 [美联社调查：网上假粉丝大军提升中国全球信息传递能力](/articles/voa/1040863.md)
 
 5-12 [电视占北京在美宣传影响活动的开支大头](/articles/voa/1040864.md)
@@ -598,6 +600,4 @@
 4-29 [拜登：习近平在打赌美国的民主赶不上专制](/articles/voa/1041160.md)
 
 4-29 [美国宇航局在火星缔造飞行历史](/articles/voa/1041161.md)
-
-4-29 [执政百日：拜登是否在履行多边主义承诺?](/articles/voa/1041162.md)
 
