--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-12 [中国4月PPI同比上涨6.8%](/articles/ft/1045632.md)
+
 5-12 [中国如何应对人口负增长前景？](/articles/ft/1045633.md)
 
 5-12 [人口普查数据背后的结构性变化](/articles/ft/1045634.md)
@@ -598,6 +600,4 @@
 3-8 [读懂两会：做趋势的朋友](/articles/ft/1045930.md)
 
 3-8 [数字人民币冲刺进行时](/articles/ft/1045931.md)
-
-3-8 [碳达峰对中国经济的启示](/articles/ft/1045932.md)
 
